# ey-agentic-ai-training-01

./: push.sh  pyproject.toml
day_3_agentic_ai/02_structures_outputs_tool_calling/: 02_structured_output.py  03_tool_calling.py
day_4_langchain/03_rag/: 01_ingestion_chunking.py  02_retrievers.py  03_grounded_answer.py
day_4_langchain/data/: customer_messages.json  meridian_kb.json
day_5_langgraph/01_building_blocks/: 01_state.py  02_reducers.py  03_nodes.py  04_edges.py  05_conditional_edges.py  06_command.py  07_send.py
day_5_langgraph/02_capabilities/: 01_persistence_checkpointers.py  02_durable_execution.py  07_subgraphs.py
day_5_langgraph/multi-agent-project/loan_underwriting_desk/backend/: calc.py  config.py  events.py  graph.py  server.py  state.py
day_5_langgraph/multi-agent-project/loan_underwriting_desk/backend/agents/: __init__.py  credit_analyst.py  fraud_investigator.py  policy_officer.py
day_5_langgraph/multi-agent-project/loan_underwriting_desk/backend/data/: lending_policy.json
day_5_langgraph/multi-agent-project/loan_underwriting_desk/backend/nodes/: __init__.py  agent_nodes.py  decision_nodes.py
day_5_langgraph/multi-agent-project/loan_underwriting_desk/backend/tools/: __init__.py  credit_tools.py  fraud_tools.py  policy_tools.py
day_5_langgraph/multi-agent-project/loan_underwriting_desk/frontend/: index.html
